--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,7 +5,7 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:300italic,400
 // bootstrap theme and bootstrap
 @import "yetti-theme";
 @import "bootstrap";
-@import "components";
+@import "components/dockeditor";
 
 html {
   height:100%;
