--- a/app/styles/components/dockeditor.scss
+++ b/app/styles/components/dockeditor.scss
@@ -34,6 +34,12 @@
       .panel {
         height:100%;
         margin-bottom: 0;
+        overflow:hidden;
+        
+        .panel-body {
+          height:100%;
+          overflow-y: scroll;
+        }
       }
     }
   }
