--- a/app/styles/components/dockeditor.scss
+++ b/app/styles/components/dockeditor.scss
@@ -9,7 +9,7 @@
     height:100%;
     padding-right: 0px !important;
 
-    .dock-view {
+    .dock-view-container {
       height: 100%;
       padding-bottom: 15px;
 
@@ -35,11 +35,15 @@
         height:100%;
         margin-bottom: 0;
         overflow:hidden;
-        
+
         .panel-body {
           height:100%;
           overflow-y: scroll;
         }
+      }
+
+      .dock-picker-component {
+        overflow: hidden;
       }
     }
   }
