--- a/app/styles/components/dockeditor.scss
+++ b/app/styles/components/dockeditor.scss
@@ -26,6 +26,10 @@
         background-color: $dock-component-color;
         position: absolute;
       }
+
+      .red {
+        background-color: #f00
+      }
     }
 
     .shore-view {
