--- a/app/styles/yetti-theme.scss
+++ b/app/styles/yetti-theme.scss
@@ -7,6 +7,9 @@
   font-weight: 300;
 }
 
+.btn-xxs {
+   font-size: 8px !important; 
+}
 // Variables
 // --------------------------------------------------
 
