--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,6 +6,7 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:300italic,400
 @import "yetti-theme";
 @import "bootstrap";
 @import "components/dockeditor";
+@import "components/svg";
 
 html {
   height:100%;
