--- a/app/styles/components/dockeditor.scss
+++ b/app/styles/components/dockeditor.scss
@@ -1,12 +1,13 @@
 
 .dock-editor {
- 
+
   /////////////////////////////////
   // SVG Parent
   /////////////////////////////////
 
   .dock-svg-parent {
     touch-action: none; // this disables touch scrolling
+    padding-top: 60px;
   }
 
   /////////////////////////////////
