--- a/app/styles/components/dockeditor.scss
+++ b/app/styles/components/dockeditor.scss
@@ -57,11 +57,13 @@
           // this allows the bottom of the scrollbar to show
           height: calc( 100% - 42px );
           overflow-y: scroll;
+          padding: 0;
         }
       }
 
-      .dock-picker-component {
+      .dock-picker-item {
         overflow: hidden;
+        border-width: 0 !important;
 
         .drag-item {
           width: 100px;
