renamed Cross to CenterLine

--- a/app/styles/components/svg.scss
+++ b/app/styles/components/svg.scss
@@ -28,7 +28,7 @@ $text-color: #777;
       fill:$shoreline-color;
     }
 
-    .cross {
+    .center-line {
       stroke-width: 1;
       stroke: $cross-color;
     }
