--- a/app/styles/yetti-theme.scss
+++ b/app/styles/yetti-theme.scss
@@ -692,7 +692,7 @@ $list-group-hover-bg:           #f5f5f5 !default;
 $list-group-active-color:       $component-active-color !default;
 //** Background color of active list items
 $list-group-active-bg:          $component-active-bg !default;
-//** Border color of active list elements
+//** Border color of active list components
 $list-group-active-border:      $list-group-active-bg !default;
 //** Text color for content within active list items
 $list-group-active-text-color:  lighten($list-group-active-bg, 40%) !default;
@@ -719,7 +719,7 @@ $panel-heading-padding:       10px 15px !default;
 $panel-footer-padding:        $panel-heading-padding !default;
 $panel-border-radius:         $border-radius-base !default;
 
-//** Border color for elements within panels
+//** Border color for components within panels
 $panel-inner-border:          $table-border-color !default;
 $panel-footer-bg:             #f5f5f5 !default;
 
@@ -806,7 +806,7 @@ $breadcrumb-bg:                 #f5f5f5 !default;
 $breadcrumb-color:              $gray-light !default;
 //** Text color of current page in the breadcrumb
 $breadcrumb-active-color:       $gray-dark !default;
-//** Textual separator for between breadcrumb elements
+//** Textual separator for between breadcrumb components
 $breadcrumb-separator:          "/" !default;
 
 
