--- a/app/styles/components/svg.scss
+++ b/app/styles/components/svg.scss
@@ -56,6 +56,10 @@ $text-color: #777;
     pointer-events: none;
   }
 
+  .component.dragging {
+    opacity:0.5;
+  }
+
   .component.pointer-painted {
     pointer-events: painted !important;
   }
