--- a/app/styles/components/dockeditor.scss
+++ b/app/styles/components/dockeditor.scss
@@ -68,19 +68,20 @@
       .component-picker-item {
         overflow: hidden;
         border-width: 0 !important;
+        background-color: #FDFDFD;
+        padding-bottom: 2px;
+
+        hr {
+          margin-top: 0px;
+          margin-bottom: 0px;
+        }
 
         .drag-item {
-          width: 100px;
-          height: 100px;
-          margin-top:8px;
-          background-color: #808080;
+          padding-top: 8px;
+          border-radius: 3px;
+          padding-bottom: 12px;
 
           .drag-image {
-            background: url('/images/box.svg');
-            background-size: 64px 64px;
-            background-color: rgba(0,0,0,0);
-            width: 64px;
-            height: 64px;
             position: absolute;
             top: 50%;
             left: 50%;
