--- a/app/styles/yetti-theme.scss
+++ b/app/styles/yetti-theme.scss
@@ -5,6 +5,7 @@
 
 .navbar-brand {
   font-weight: 300;
+  margin-top: 3px;
 }
 
 .btn-xxs {
@@ -28,7 +29,7 @@ $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 $brand-primary:         #008cba !default;
 $brand-success:         #43ac6a !default;
 $brand-info:            #5bc0de !default;
-$brand-warning:         #E99002 !default;
+$brand-warning:         #f9614d !default;
 $brand-danger:          #F04124 !default;
 
 
@@ -235,7 +236,7 @@ $input-group-addon-bg:           $gray-lighter !default;
 $input-group-addon-border-color: $input-border !default;
 
 //** Disabled cursor for form controls and buttons.
-$cursor-disabled:                not-allowed !default;
+$cursor-disabled:                default;
 
 
 //== Dropdowns
