--- a/app/styles/yetti-theme.scss
+++ b/app/styles/yetti-theme.scss
@@ -8,17 +8,18 @@
   margin-top: 3px;
 }
 
-.btn-xxs {
-   font-size: 8px !important;
+.panel-heading {
+  border-bottom: 0px !important;
 }
+
 // Variables
 // --------------------------------------------------
-
 
 //== Colors
 //
 //## Gray and brand colors for use across Bootstrap.
-
+$custom-border:          #808080;
+$custom-border-light:    #dddddd;
 $gray-base:              #000 !default;
 $gray-darker:            lighten($gray-base, 13.5%) !default; // #222
 $gray-dark:              lighten($gray-base, 20%) !default;   // #333
@@ -724,9 +725,9 @@ $panel-border-radius:         $border-radius-base !default;
 $panel-inner-border:          $table-border-color !default;
 $panel-footer-bg:             #f5f5f5 !default;
 
-$panel-default-text:          $gray-dark !default;
-$panel-default-border:        $table-border-color !default;
-$panel-default-heading-bg:    #f5f5f5 !default;
+$panel-default-text:          #fff;
+$panel-default-border:        $custom-border; //$gray-dar !default;
+$panel-default-heading-bg:    $btn-success-bg;//#017398;//#0282ac !default;
 
 $panel-primary-text:          #fff !default;
 $panel-primary-border:        $brand-primary !default;
@@ -878,4 +879,4 @@ $dl-horizontal-offset:        $component-offset-horizontal !default;
 //** Point at which .dl-horizontal becomes horizontal
 $dl-horizontal-breakpoint:    $grid-float-breakpoint !default;
 //** Horizontal line color.
-$hr-border:                   $table-border-color !default;
+$hr-border:                   $custom-border-light !default;
