changed grid colors

--- a/app/styles/components/svg.scss
+++ b/app/styles/components/svg.scss
@@ -1,8 +1,8 @@
 $shoreline-color: #d3ffd7;
 $cross-color: #333;
-$grid-color: #c2e2ec;
-$grid-color-highlight: #aaa;
-$text-color: #777;
+$grid-color: #558fa2;
+$grid-color-highlight: #4f4f4f;
+$text-color: #222;
 $panel-fill: #C0C0C0;
 
 .dock-svg {
