updated grid colors

--- a/app/styles/components/svg.scss
+++ b/app/styles/components/svg.scss
@@ -1,7 +1,7 @@
 $shoreline-color: #d3ffd7;
 $cross-color: #333;
-$grid-color: #558fa2;
-$grid-color-highlight: #4f4f4f;
+$grid-color: rgba(188, 188, 188, 0.50);
+$grid-color-highlight: #dfdfdf;
 $text-color: #222;
 $panel-fill: #C0C0C0;
 $water-color: #5fb3d1;
