--- a/app/styles/components/svg.scss
+++ b/app/styles/components/svg.scss
@@ -2,9 +2,12 @@ $shoreline-color: #d3ffd7;
 $cross-color: #333;
 $grid-color: rgba(188, 188, 188, 0.50);
 $grid-color-highlight: #dfdfdf;
-$text-color: #222;
 $panel-fill: #C0C0C0;
 $water-color: #5fb3d1;
+$text-color: #222;
+$text-bubble-color: #eee;
+$text-bubble-border: #aaa;
+
 
 .dock-svg {
   -webkit-user-select: none;
@@ -45,11 +48,21 @@ $water-color: #5fb3d1;
       .highlight {
         stroke: $grid-color-highlight;
       }
+      
+      .highlight-dark {
+        stroke: $text-bubble-border;
+      }
 
       .text {
         stroke-width: 0;
         font-size: 12px;
         fill: $text-color;
+      }
+
+      .text-bubble {
+        stroke-width: 1;
+        stroke: $text-bubble-border;
+        fill: $text-bubble-color;
       }
     }
   }
