added commented out alternative color

--- a/app/styles/components/svg.scss
+++ b/app/styles/components/svg.scss
@@ -2,7 +2,7 @@ $shoreline-color: #d3ffd7;
 $cross-color: #333;
 $grid-color: rgba(188, 188, 188, 0.50);
 $grid-color-highlight: #dfdfdf;
-$water-color: #5fb3d1;
+$water-color: #5fb3d1; // or b3ebff 
 $text-color: #222;
 $text-bubble-color: #eee;
 $text-bubble-border: #aaa;
