--- a/app/styles/components/svg.scss
+++ b/app/styles/components/svg.scss
@@ -42,6 +42,14 @@ $hightlight-color: #0F0;
       text-shadow: 0px 1px 0px rgba(255,255,255,.4), 0px -0.5px 0px rgba(0,0,0,.4)
     }
 
+    .lake-text {
+      font-size: 32px;
+      font-family: "Century Gothic", "Helvetica", sans-serif;
+      font-weight: bold;
+      fill: #57a6c1; // or #6097aa;
+      text-shadow: 0px 1px 0px rgba(255,255,255,.4), 0px -0.5px 0px rgba(0,0,0,.4)
+    }
+
     .center-line {
       stroke-width: 1;
       stroke: $cross-color;
