--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,7 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:300italic,400
 @import "bootstrap";
 @import "components/dockeditor";
 @import "components/svg";
+@import "react-joyride";
 
 html {
   height:100%;
